--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,50 @@
-table {
-    border-style: solid black 1px;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Gothic+Coding&display=swap');
+
+body{
+    font-family: 'Montserrat';
 }
+
+.info{
+    display: flex;
+    flex-direction: row;
+    
+}
+
+button, select, input {
+    font-size: 14px;
+}
+
+
+
+#botons {
+    margin: 2em 35em 5em 35em;
+
+}
+
+table {
+    border: solid 1px rgb(43, 43, 43);
+    margin:5em;
+}
+
+th {
+    color: white;
+    background-color:rgb(36, 36, 36);
+}
+
+tr {
+    align-items: center;
+}
+td {
+    text-align: center;
+}
+td img {
+    width: 100%;
+    height: auto; 
+    display: block; 
+}
+tr:nth-child(even) {
+    background-color: #f0f0f0;
+    border-color:#ffffff;
+}
+
